[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "showroompay"
version = "0.1.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["showroompay*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "__eval_*.py"]

